--- a/index.html
+++ b/index.html
@@ -71,6 +71,40 @@
     button:hover {
       background-color: #218838;
     }
+
+    /* Адаптивность */
+    @media (max-width: 768px) {
+      table {
+        width: 100%;
+      }
+
+      button {
+        width: 100%;
+        padding: 12px;
+        font-size: 18px;
+      }
+
+      #row-count {
+        width: 80px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      h2 {
+        font-size: 20px;
+      }
+
+      input,
+      select {
+        padding: 12px;
+      }
+
+      table th,
+      table td {
+        padding: 10px;
+        font-size: 12px;
+      }
+    }
   </style>
 </head>
 
